attached_assets/Pasted--replit-cartographer-Error-processing-home-runner-workspace-client-src-App-tsx-SyntaxError-Unexp-1759787900136_1759787900137.txt
[replit-cartographer] Error processing /home/runner/workspace/client/src/App.tsx: SyntaxError: Unexpected token (220:45)
    at toParseError (/home/runner/workspace/node_modules/@babel/parser/src/parse-error.ts:95:45)
    at raise (/home/runner/workspace/node_modules/@babel/parser/src/tokenizer/index.ts:1503:19)
    at unexpected (/home/runner/workspace/node_modules/@babel/parser/src/tokenizer/index.ts:1543:16)
    at parseParenAndDistinguishExpression (/home/runner/workspace/node_modules/@babel/parser/src/parser/expression.ts:1844:12)
    at parseExprAtom (/home/runner/workspace/node_modules/@babel/parser/src/parser/expression.ts:1162:21)
    at parseExprAtom (/home/runner/workspace/node_modules/@babel/parser/src/plugins/jsx/index.ts:583:22)
    at parseExprSubscripts (/home/runner/workspace/node_modules/@babel/parser/src/parser/expression.ts:734:23)
    at parseUpdate (/home/runner/workspace/node_modules/@babel/parser/src/parser/expression.ts:713:21)
    at parseMaybeUnary (/home/runner/workspace/node_modules/@babel/parser/src/parser/expression.ts:675:23)
    at parseMaybeUnary (/home/runner/workspace/node_modules/@babel/parser/src/plugins/typescript/index.ts:3855:20) {
  code: 'BABEL_PARSER_SYNTAX_ERROR',
  reasonCode: 'UnexpectedToken',
  loc: Position { line: 220, column: 45, index: 12511 },
  pos: 12511,
  syntaxPlugin: undefined
}
9:56:51 PM [vite] (client) Pre-transform error: Transform failed with 1 error:
/home/runner/workspace/client/src/App.tsx:220:46: ERROR: Expected "=>" but found "="
  Plugin: vite:esbuild
  File: /home/runner/workspace/client/src/App.tsx:220:46
  
  Expected "=>" but found "="
  218 |  
  219 |        {/* International locations */}
  220 |        <Route path="/jobs/london" component={()={() => <Jobs location="london" />} />
      |                                                ^
  221 |        <Route path="/jobs/toronto" component={() => <Jobs location="toronto" />} />
  222 |        <Route path="/jobs/sydney" component={() => <Jobs location="sydney" />} />